// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select :props :bordered 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :clearable 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :creatable 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :disabled 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select t-is-disabled"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :labelInValue 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :loading 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :multiple 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :placeholder 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> please select</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="please select" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :remote 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :reserveKeyword 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select :props :size 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select t-size-l"><svg class="t-icon t-icon-undefined t-size-l t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder"> 请选择</span> <input type="hidden" name="t-select" style="width: 0px;">
      <!---->
      <div class="t-input t-size-l t-select-input" style="display: none;"><input placeholder="请选择" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-l t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-size-l t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-size-l t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :disabled 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="1" style="width: 0px;"> <span title="1" class="t-select-selectedSingle">
        1
      </span>
      <div class="t-input t-select-input" style="display: none;"><input placeholder="1" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :label 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="1" style="width: 0px;"> <span title="1" class="t-select-selectedSingle">
        1
      </span>
      <div class="t-input t-select-input" style="display: none;"><input placeholder="1" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :value 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="1" style="width: 0px;"> <span title="1" class="t-select-selectedSingle">
        1
      </span>
      <div class="t-input t-select-input" style="display: none;"><input placeholder="1" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select OptionGroup :props :value 1`] = `
<div>
  <div class="t-popup-reference" style="width: 100%; position: relative;">
    <div class="t-select"><svg class="t-icon t-icon-undefined t-select-left-icon" style="display: none;">
        <use xlink:href="#t-icon-undefined"></use>
      </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="1" style="width: 0px;"> <span title="1" class="t-select-selectedSingle">
        1
      </span>
      <div class="t-input t-select-input" style="display: none;"><input placeholder="1" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-select-right-icon">
        <use xlink:href="#t-icon-chevron-down"></use>
      </svg> <svg class="t-icon t-icon-close t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-close"></use>
      </svg> <svg class="t-icon t-icon-loading t-select-right-icon" style="display: none;">
        <use xlink:href="#t-icon-loading"></use>
      </svg>
      <!---->
    </div>
    <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
      <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
      </div>
      <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
        <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
      </div>
    </div>
  </div>
</div>
`;
